# Multi-Threaded_HTTP_Server

./: .gitignore  CMakeLists.txt  README.md
files/: HelloWorld.html
include/: file_serve.h  main.h  request_handler.h  server.h  word_game.h
resources/: dictionary.txt
src/: file_serve.c  main.c  request_handler.c  server.c  word_game.c
